# logid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/benches/: bench.rs
bench/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  log_id.rs  logged_result.rs  result.rs  set_macros.rs
core/src/event/: entry.rs  mod.rs
core/src/logging/: error_event.rs  event_addons.rs  event_entry.rs  filter.rs  intermediary_event.rs  mod.rs  msg.rs
core/src/logging/filter/: filter_builders.rs  mod.rs
core/src/logging/tests/filter/: addons.rs  global_ids.rs  mod.rs  only_general.rs  only_module.rs  rule_mix.rs
core/tests/: default_set_events.rs  diagnostics_feature.rs  logged_results.rs  payloads_feature.rs  set_events.rs  with_addons.rs
core/tests/filter/: addons.rs  global_ids.rs  mod.rs  only_general.rs  only_module.rs  rule_mix.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: default_set_events.rs  derive_log_id.rs  derive_payload_log_id.rs  diagnostics_feature.rs  err_log_id.rs  from_log_id.rs  payloads_feature.rs
logid/: Cargo.toml
logid/src/: event_handler.rs  lib.rs  macros.rs
logid/src/event_handler/: builder.rs  mod.rs  terminal.rs
logid/tests/: default_set_events.rs  derive_log_id.rs  diagnostics_feature.rs  fmt_msg.rs  panic_hook.rs  payloads_feature.rs  result_chain.rs  with_addons.rs
src/: capturing.rs  crate_map.rs  id_entry.rs  id_layer.rs  id_map.rs  lib.rs  log_id.rs  publisher.rs
src/event/: diagnostic.rs  entry.rs  intermediary.rs  macros.rs  mod.rs  msg.rs  origin.rs
tests/: capturing.rs  diagnostics.rs  drainable.rs  helper.rs  id_map.rs  last_id.rs  macro_events.rs  set_events.rs  subscribe.rs  threading.rs
