[package]
name = "logid"
version = "0.7.1"
edition = "2021"
description = "Rust logging framework using IDs to identify log entries."
repository = "https://github.com/mhatzl/logid"
license = "MIT"
keywords = ["logging", "tracing"]
categories = ["development-tools::debugging"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13"
chrono = "0.4"
tracing = { version = "0.1", optional = true }
lsp-types = { version = "0.94", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
diagnostics = ["lsp-types"]
causes = []
payloads = ["serde_json"]
spans = ["tracing"]

[dev-dependencies]
tracing-subscriber = "0.3"
rayon = "1.7"
