[workspace]
members = [
  "core",
  "derive",
]

[workspace.package]
version = "0.7.1"
edition = "2021"
description = "Rust logging framework using IDs to identify log entries."
repository = "https://github.com/mhatzl/logid"
license = "MIT"
keywords = ["logging", "tracing"]
categories = ["development-tools::debugging"]
readme = "README.md"
