[package]
name = "logid"
version.workspace = true
edition.workspace = true
description = "Rust logging framework using IDs to identify log entries."
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["logging", "tracing"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evident = "0.4"
once_cell = "1.13"
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing = { version = "0.1", optional = true }
lsp-types = { version = "0.94", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
diagnostics = ["lsp-types"]
causes = []
payloads = ["serde_json"]
spans = ["tracing"]

[dev-dependencies]
tracing-subscriber = "0.3"
rayon = "1.7"
logid-derive = { path = "../derive", version = "0.7" }
