[package]
name = "logid"
version.workspace = true
edition.workspace = true
description = "Rust logging framework using IDs to identify log entries."
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["logging", "tracing"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evident = { path = "../../evident", version = "0.4" }
lsp-types = { version = "0.94", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
diagnostics = ["lsp-types"]
payloads = ["serde_json"]

[dev-dependencies]
rayon = "1.7"
logid-derive = { path = "../derive", version = "0.7" }
