[package]
name = "logid-core"
description = "Core for the [logid](https://crates.io/crates/logid) logging framework."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evident = { version = "0.9" }
lsp-types = { version = "0.94", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
diagnostics = ["lsp-types"]
payloads = ["serde_json"]
test_filter = []
