[package]
name = "logid-derive"
description = "Provides derive macros for the [logid](https://crates.io/crates/logid) logging framework."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
logid = { path = "../core", version = "0.7" }
syn = { version = "2.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
diagnostics = ["logid/diagnostics"]
payloads = ["logid/payloads"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
